disabled bootstrap and fixed flipswitch positioning and dimmer box overflow

--- a/static/assets/main.scss
+++ b/static/assets/main.scss
@@ -207,8 +207,9 @@ html, body {
 
   .switchContainer{
     float: right;
-    line-height: 100px;
-    margin: 0 15px 0 0;
+    line-height: 90px;
+    width: 50px;
+    margin: 0 25px 0 0;
     }
 
 }
@@ -255,9 +256,10 @@ html, body {
       .dimmer{
         background:rgba(0,0,0,0.4);
         width: 100%;
-        margin-top: 80px;
+        margin-top: 79px;
         border-radius: 8px;
         padding: 30px 10px 20px 10px;
+        box-sizing: border-box;
       }
 
       .header{
@@ -325,6 +327,7 @@ html, body {
   position: relative;
   width: 57px;
   height: 30px;
+  background: pink;
 }
 
   .switchContainer .switch input {
@@ -344,6 +347,8 @@ html, body {
   -webkit-transition: .4s;
   transition: .4s;
   border-radius: 40px;
+  width: 57px;
+  height: 30px;
 }
 
   .switchContainer .slider:before {
